# alexa-custom

./: .env.example  .gitignore  AGENTS.md  README.md  Taskfile.yml  actions.yaml.example  config.yaml.example  livekit_client.py  make-report.md  pyproject.toml  requirements.txt  test-sherpa.py  test-vosk.py  test_newpie.py
.claude/skills/test-stt-e2e/: SKILL.md
alexa_custom/: __init__.py  _env.py  actions.py  audio.py  client.py  config.py  config_manager.py  mqtt.py  setup.py  stt.py  tts.py  tui.py  web.py
docs/: arduino-uno-q.md  configuration.md  mqtt_integration.md  setup_hardware.md  setup_software.md  sherpa_onnx.md  troubleshooting.md
kernel/: build_kernel_6.sh  config-6.16.7-g0dd6551ae96b  kernel_6.md  kernel_7.md
openspec/changes/archive/2026-05-22-fix-audio-and-exit/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-22-gated-stt/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-22-optimize-vu-meters/: design.md  proposal.md  tasks.md
openspec/specs/action-dispatch/: spec.md
openspec/specs/audio-level-monitoring/: spec.md
openspec/specs/audio-management/: spec.md
openspec/specs/home-assistant-integration/: spec.md
openspec/specs/mqtt-integration/: spec.md
openspec/specs/sherpa-onnx-stt/: spec.md
openspec/specs/telegram-notify/: spec.md
openspec/specs/text-to-speech/: spec.md
openspec/specs/wake-word-detection/: spec.md
openspec/specs/web-interface/: spec.md
openspec/specs/yaml-config/: spec.md
reports/: comparison_2026-05-23T13:54:29.md  optimization_2026-05-23.md  snapshot_2026-05-23T13:38:42.md  snapshot_2026-05-23T13:54:29.md
setup/: alexa-custom.service
tests/: test_actions.py  test_client.py  test_config.py  test_stt_e2e.py  test_tts.py
(+46 files in other folders)
