[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alexa-custom"
version = "0.2.0"
description = "LiveKit headless audio client for Bluetooth conference speakerphones"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "livekit>=1.1.0",
    "livekit-api>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "pulsectl>=23.0.0",
    "vosk>=0.3.45",
    "pyaudio>=0.2.14",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiomqtt>=2.5.1",
    "aiohttp>=3.9",
]

[project.scripts]
alexa-client = "alexa_custom.client:main"
alexa-audio = "alexa_custom.audio:main"
alexa-devices = "alexa_custom.audio:main_devices"
alexa-setup = "alexa_custom.setup:main"
alexa-audio-setup = "alexa_custom.audio:setup_audio"

[tool.setuptools.packages.find]
where = ["."]
include = ["alexa_custom*"]
